--- a/project_bulma.html
+++ b/project_bulma.html
@@ -156,7 +156,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </nav>
                         </div>
                     </div>
@@ -338,6 +337,56 @@
                     </div>
                 </div>
             </section>
+
+            <body>
+                <section class="section">
+                    <div class="container">
+                        <h1 class="title">Partner Sites</h1>
+
+
+                        <div class="container">
+                            <!-- <img src="assets/css/images/travel.gif" alt="travel"></img> -->
+
+                            <div class="columns">
+                                <div class="column is-vcentered">
+
+                                    <a href="https://www.tripadvisor.com/Restaurants">
+
+
+                                        <i class="fas fa-utensils" style="font-size:30px;color:#82A0C2"></i>
+                                    </a>
+
+                                </div>
+                                <div class="column">
+
+                                    <a
+                                        href="https://www.trivago.com/?themeId=114&iPathId=34812&sem_keyword=reserve%20hotel&sem_creativeid=334924274844&sem_matchtype=e&sem_network=g&sem_device=c&sem_placement=&sem_target=&sem_adposition=1t2&sem_param1=&sem_param2=&sem_campaignid=99851886&sem_adgroupid=5212020246&sem_targetid=kwd-51173231&sem_location=9004041&cip=1061900383&gclid=CjwKCAiAsIDxBRAsEiwAV76N891ky2TgoumInE5H1f2KfaIVqE7mE5AL6IUWl1WZQbn7ZxuEN-EbBBoC-A0QAvD_BwE">
+                                        <i class="fas fa-hotel" style="font-size:30px;color:#82A0C2"></i>
+                                    </a>
+
+                                </div>
+                                <div class="column">
+                                    <a
+                                        href="https://www.travelchannel.com/interests/shopping/photos/best-shopping-cities-around-the-world">
+                                        <i class="fas fa-shopping-cart" style="font-size:30px;color:#82A0C2"></i>
+                                    </a>
+
+                                </div>
+                                <div class="column">
+                                    <a
+                                        href="https://www.expedia.com/Flights?langid=1033&semcid=US.MULTILOBF.GOOGLE.GT-c-EN.FLIGHT&semdtl=a1355852835.b125535175155.r1.g1kwd-18708030.i1.d1280328929850.e1c.j19004041.k1.f11t1.n1.l1g.h1e.m1&gclid=CjwKCAiAsIDxBRAsEiwAV76N83hlRcqVVq_uGapGf9uTuozEjXcbe_FrOB6t3mw-WXVGG_ACBk4AGBoCWc0QAvD_BwE">
+                                        <i class="fas fa-plane" style="font-size:30px;color:#82A0C2"></i>
+                                    </a>
+                                </div>
+
+
+                            </div>
+
+
+
+                        </div>
+                </section>
+            </body>
 
             <!--Footer section Box-->
             <footer class="footer reduce-padding-margin-to-0">
