Added reload method

--- a/index.html
+++ b/index.html
@@ -681,7 +681,15 @@
                     });
             };
 
+            //Reload page when you click on logo
+            $("#travellogo").on("click", function (event) {
 
+                location.reload(true);
+                // $("#Trending").show();
+                // $("#Suggestions").hide();
+                // $(".resultsSection").hide();
+
+            });
         </script>
     </body>
 
